# poly_query_mcp

./: CHANGELOG.md  README.md  config.enhanced.json  config.example.json  main.py  pyproject.toml
.github/workflows/: publish.yml
docs/: API.md
examples/: claude-desktop-config-uvx-full.json
src/poly_query_mcp/: server.py
src/poly_query_mcp/databases/: mysql_connection.py  postgresql_connection.py  redis_connection.py
src/poly_query_mcp/utils/: config.json  config.py  enhanced_config.py  enhanced_config_manager.py
